--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dev_dependencies:
     sdk: flutter
   cloud_firestore: ^4.1.0
   intl: ^0.17.0
+  dropdown_search: ^5.0.5
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
