--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   qrscan: ^0.3.3
   flutter_barcode_scanner: ^2.0.0
 
@@ -41,6 +40,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
+  flutter_launcher_icons: ^0.11.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/crave.png"
+  adaptive_icon_foreground: 'assets/logo_foreground.png'
+  adaptive_icon_background: '#fafcff'
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +55,9 @@ dev_dependencies:
   cloud_firestore: ^4.1.0
   intl: ^0.17.0
   dropdown_search: ^5.0.5
+
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
