--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
   flutter_launcher_icons: ^0.11.0
+  firebase_database: ^10.0.7
+
+  google_ml_kit: ^0.13.0
+  image_picker: ^0.8.6
+  csc_picker: ^0.2.6
 
 flutter_icons:
   android: true
