--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   google_ml_kit: ^0.13.0
   image_picker: ^0.8.6
   csc_picker: ^0.2.6
+  image_cropper: ^3.0.1
+
+  shared_preferences: ^2.0.15
 
 flutter_icons:
   android: true
