--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,13 +43,19 @@ dependencies:
   flutter_launcher_icons: ^0.11.0
   firebase_database: ^10.0.9
 
-  google_ml_kit: ^0.13.0
   image_picker: ^0.8.6
   csc_picker: ^0.2.6
   image_cropper: ^3.0.1
 
   shared_preferences: ^2.0.15
   country_picker: ^2.0.19
+
+  firebase_storage: ^11.0.10
+  file_picker: ^5.2.5
+
+  cloud_firestore: ^4.3.1
+  intl: ^0.18.0
+  dropdown_search: ^5.0.5
 
 flutter_icons:
   android: true
@@ -61,9 +67,7 @@ flutter_icons:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  cloud_firestore: ^4.3.1
-  intl: ^0.18.0
-  dropdown_search: ^5.0.5
+
 
 
 
