--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   cloud_firestore: ^4.3.1
   intl: ^0.18.0
   dropdown_search: ^5.0.5
+  flutter_spinkit: ^5.1.0
+  progress_indicator_button: ^0.0.3
 
 flutter_icons:
   android: true
