--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   firebase_database: ^10.0.9
 
   image_picker: ^0.8.6
-  csc_picker: ^0.2.6
+  csc_picker: ^0.2.7
   image_cropper: ^3.0.1
 
   shared_preferences: ^2.0.15
@@ -58,6 +58,7 @@ dependencies:
   dropdown_search: ^5.0.5
   flutter_spinkit: ^5.1.0
   progress_indicator_button: ^0.0.3
+  provider: ^6.0.5
 
 flutter_icons:
   android: true
@@ -69,10 +70,6 @@ flutter_icons:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-
-
-
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
